--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <title>Request.js</title>
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Request.js</h1>
-    <p>Waiting for release</p>
+  	<div class="app">
+  		<h1>Request.js</h1>
+  		<p>Dynamic JavaScript module request library.</p>
+  		<div class="content">
+  			<h2>Contact:</h2>
+  			<p>Author: Zhai Wufan</p>
+  			<p>GitHub: <a href="">https://github.com/requestjs</a></p>
+  			<p>Email: <a href="">developer@requestjs.com</a> or <a href="">mail@zhaiwufan.com</a></p>
+  		</div>
+  	</div>
   </body>
 </html>
