--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
   </head>
   <body>
   	<div class="app">
-  		<h1>Request.js</h1>
-  		<p>Dynamic JavaScript module request library.</p>
-  		<div class="content">
-  			<h2>Contact:</h2>
-  			<p>Author: Zhai Wufan</p>
-  			<p>GitHub: <a href="">https://github.com/requestjs</a></p>
-  			<p>Email: <a href="">developer@requestjs.com</a> or <a href="">mail@zhaiwufan.com</a></p>
-  		</div>
+  		<h1>Request.js is developing.</h1>
+      <p>Jieran Wang -> <a href="https://github.com/keviw">Github</a></p>
   	</div>
   </body>
 </html>
